<resources>
    <string name="app_name">Ival_revisited</string>
    <string name="zero">0</string>
    <string name="miss_txt">Miss:</string>
    <string name="make_txt">Make:</string>
    <string name="start_txt">START</string>
    <string name="timer_txt">00:00:00</string>
    <string name="stop_txt">STOP</string>
    <string name="total_accuracy_txt">Total Accuracy: %1$d%%</string>
    <string name="pos_accuracy_txt">Position Accuracy: %1$d%%</string>
    <string name="accuracy_txt">Accuracy: %1$d%%</string>
    <string name="quickstart">Quickstart</string>
    <string name="position">Position</string>
    <string name="stats">Stats</string>
    <string name="select_a_position_to_shoot_from">Select a position to shoot from</string>
    <string name="you_have_selected">Position: %1$s</string>
    <string name="stats_missed_made">Made: %1$d  Missed: %2$d</string>
    <string name="stats_detail_total_made">%1$s total shots made: %2$d / %3$d</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="y">Y</string>
</resources>
