<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickstartActivity">

    <TextView
        android:id="@+id/showMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/zero"
        android:background="@color/colorAccent"
        android:textSize="@dimen/make_miss_text_size"
        android:elevation="2dp"
        app:layout_constraintStart_toEndOf="@id/textMake"
        app:layout_constraintBottom_toBottomOf="@id/textMake"
        app:layout_constraintTop_toTopOf="@id/textMake"/>

    <TextView
        android:id="@+id/simpleTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/timer_txt"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:background="@color/colorAccent"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startStopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/start_txt"
        android:fontFamily="@font/permanent_marker_reg"
        android:textSize="20sp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_txt"
        android:background="@color/colorAccent"
        android:elevation="2dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/permanent_marker_reg"
        android:textSize="@dimen/make_miss_text_size"
        app:layout_constraintBottom_toTopOf="@id/textMiss"
        app:layout_constraintEnd_toStartOf="@+id/showMake"
        app:layout_constraintStart_toStartOf="@id/startStopBtn"
        />

    <TextView
        android:id="@+id/textMiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miss_txt"
        android:elevation="2dp"
        android:fontFamily="@font/permanent_marker_reg"
        android:textSize="@dimen/make_miss_text_size"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@id/startStopBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/quickstart_bottom_margin" />

    <TextView
        android:id="@+id/showMiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:elevation="2dp"
        android:textSize="@dimen/make_miss_text_size"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@id/showMake"
        app:layout_constraintTop_toTopOf="@id/textMiss"
        app:layout_constraintBottom_toBottomOf="@id/textMiss"/>

    <TextView
        android:id="@+id/position_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/permanent_marker_reg"
        android:textSize="@dimen/make_miss_text_size"
        android:background="@color/colorAccent"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="@id/total_percentage"
        app:layout_constraintBottom_toTopOf="@id/total_percentage"
        />

    <TextView
        android:id="@+id/total_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="@font/permanent_marker_reg"
        android:textSize="@dimen/make_miss_text_size"
        android:background="@color/colorAccent"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/quickstart_bottom_margin"
        android:layout_marginEnd="25dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pretty_basketball"
        />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">


        </FrameLayout>




        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/colorPrimaryDark"
            app:itemTextColor="#000000"
            app:menu="@menu/bottom_navigation_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>